argocd/manifests/immich-ringtail/service-ml.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  selector:
    app: immich
    component: machine-learning
  ports:
    - name: http
      port: 3003
      targetPort: 3003
